// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render control correctly: control renderer 1`] = `
<Control
  className="abs-height-100 Select-control"
/>
`;

exports[`should render correctly 1`] = `
<SearchSelect
  autoFocus={true}
  className="Select-big width-100"
  components={
    Object {
      "Control": [Function],
      "Option": [Function],
      "SingleValue": [Function],
    }
  }
  defaultOptions={true}
  id="change-profile-permission"
  inputId="change-profile-permission-input"
  isClearable={false}
  loadOptions={[Function]}
  noOptionsMessage={[Function]}
  onChange={[MockFunction]}
  placeholder=""
/>
`;

exports[`should render option correctly: option renderer 1`] = `
<Option
  className="Select-option"
  data={
    Object {
      "name": "name",
      "value": "test",
    }
  }
>
  <GroupIcon
    size={16}
  />
  <strong
    className="spacer-left"
  >
    name
  </strong>
</Option>
`;

exports[`should render value correctly: value renderer 1`] = `
<SingleValue
  className="Select-value-label"
  data={
    Object {
      "name": "name",
      "value": "test",
    }
  }
>
  <GroupIcon
    size={16}
  />
  <strong
    className="spacer-left"
  >
    name
  </strong>
</SingleValue>
`;
